<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>wacky.horseeggs</groupId>
	<artifactId>HorseEggs</artifactId>
	<version>1.2.0</version>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.10.1</version>
				<configuration>
					<source>21</source>
					<target>21</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<version>3.3.0</version>
				<configuration>
					<encoding>UTF-8</encoding>
					<propertiesEncoding>UTF-8</propertiesEncoding>
				</configuration>
			</plugin>
			<plugin>
				<groupId>net.md-5</groupId>
				<artifactId>specialsource-maven-plugin</artifactId>
				<version>2.0.3</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>remap</goal>
						</goals>
						<id>remap-obf</id>
						<configuration>
							<srgIn>
								org.spigotmc:minecraft-server:1.20.4-R0.1-SNAPSHOT:txt:maps-mojang</srgIn>
							<reverse>true</reverse>
							<remappedDependencies>
								org.spigotmc:spigot:1.20.4-R0.1-SNAPSHOT:jar:remapped-mojang</remappedDependencies>
							<remappedArtifactAttached>true</remappedArtifactAttached>
							<remappedClassifierName>remapped-obf</remappedClassifierName>
						</configuration>
					</execution>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>remap</goal>
						</goals>
						<id>remap-spigot</id>
						<configuration>
							<inputFile>
								${project.build.directory}/${project.artifactId}-${project.version}-remapped-obf.jar</inputFile>
							<srgIn>
								org.spigotmc:minecraft-server:1.20.4-R0.1-SNAPSHOT:csrg:maps-spigot</srgIn>
							<remappedDependencies>
								org.spigotmc:spigot:1.20.4-R0.1-SNAPSHOT:jar:remapped-obf</remappedDependencies>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
		<resources>
			<resource>
				<directory>${project.basedir}/src/main/resources</directory>
				<filtering>true</filtering>
			</resource>
		</resources>
	</build>

	<name>HorseEggs</name>
	<url>http://maven.apache.org</url>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>21</maven.compiler.source>
		<maven.compiler.target>21</maven.compiler.target>
	</properties>
	<repositories>
		<repository>
			<id>spigot-repo</id>
			<url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
		</repository>
		<repository>
			<id>Jitpack</id>
			<url>https://jitpack.io</url>
		</repository>
	</repositories>
	<dependencies>
		<dependency>
			<groupId>com.saicone.rtag</groupId>
			<artifactId>rtag</artifactId>
			<version>1.5.3</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.saicone.rtag</groupId>
			<artifactId>rtag-item</artifactId>
			<version>1.5.3</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.saicone.rtag</groupId>
			<artifactId>rtag-entity</artifactId>
			<version>1.5.3</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.spigotmc</groupId>
			<artifactId>spigot-api</artifactId>
			<version>1.20.4-R0.1-SNAPSHOT</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.spigotmc</groupId>
			<artifactId>spigot</artifactId>
			<version>1.20.4-R0.1-SNAPSHOT</version>
			<scope>provided</scope>
			<classifier>remapped-mojang</classifier>
		</dependency>
		<dependency>
			<groupId>com.github.teruteru128</groupId>
			<artifactId>logger</artifactId>
			<version>1.1.1</version>
		</dependency>
		<!--
		https://mvnrepository.com/artifact/org.mockito/mockito-junit-jupiter -->
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<version>5.11.0-M1</version>
			<scope>test</scope>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>1.18.32</version>
			<scope>provided</scope>
		</dependency>

	</dependencies>
</project>
